@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-26T16:28:28Z",
-  "count_outdated" : 2101,
-  "uniques_outdated" : 398,
-  "count" : 2141,
+  "timestamp" : "2022-05-27T01:42:18Z",
+  "count_outdated" : 2104,
+  "uniques_outdated" : 399,
+  "count" : 2143,
   "uniques" : 423,
   "clones" : [
-    {
-      "timestamp": "2022-05-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-13T00:00:00Z",
       "count": 2,
